feat: web push notifications feature

--- a/turbo.json
+++ b/turbo.json
@@ -38,7 +38,8 @@
         "STRIPE_PREMIUM_PLAN_PRODUCT_ID",
         "STRIPE_TEAM_MONTHLY_PRICE_ID",
         "STRIPE_ORG_MONTHLY_PRICE_ID",
-        "NEXT_PUBLIC_API_V2_URL"
+        "NEXT_PUBLIC_API_V2_URL",
+        "NEXT_PUBLIC_VAPID_PUBLIC_KEY"
       ]
     },
     "@calcom/web#dx": {
@@ -415,6 +416,8 @@
     "NEXT_PUBLIC_HEAD_SCRIPTS",
     "NEXT_PUBLIC_BODY_SCRIPTS",
     "NEXT_PUBLIC_ORG_SELF_SERVE_ENABLED",
-    "NEXT_PUBLIC_API_V2_ROOT_URL"
+    "NEXT_PUBLIC_API_V2_ROOT_URL",
+    "NEXT_PUBLIC_VAPID_PUBLIC_KEY",
+    "VAPID_PRIVATE_KEY"
   ]
 }
