--- a/packages/platform/libraries/package.json
+++ b/packages/platform/libraries/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calcom/platform-libraries",
-  "version": "0.0.0",
+  "version": "0.0.18",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "yarn vite build",
     "build:watch": "yarn vite build --watch",
+    "build:dev": "yarn vite build && sed -i'' -e 's/const CACHE = new lruCache\\.LRUCache({ max: 1e3 });/const CACHE = new lruCache({ max: 1e3 });/g' ./dist/index.cjs",
     "publish": "rm -rf dist && yarn build && npm publish --access public"
   },
   "dependencies": {
