fix: higher resolution Campsite icon

--- a/packages/app-store/campsite/config.json
+++ b/packages/app-store/campsite/config.json
@@ -3,7 +3,7 @@
   "name": "Campsite",
   "slug": "campsite",
   "type": "campsite_conferencing",
-  "logo": "icon.svg",
+  "logo": "icon.png",
   "url": "https://campsite.co",
   "variant": "conferencing",
   "categories": ["conferencing"],
