--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "start": "turbo run start --scope=\"@calcom/web\"",
     "tdd": "vitest watch",
     "generate-admin": "ts-node --transpile-only ./packages/prisma/seed-generate-admin.ts",
+    "generate-user": "ts-node --transpile-only ./packages/prisma/seed-generate-user.ts",
     "e2e": "NEXT_PUBLIC_IS_E2E=1 yarn playwright test --project=@calcom/web",
     "e2e:app-store": "QUICK=true yarn playwright test --project=@calcom/app-store",
     "e2e:embed": "QUICK=true yarn playwright test --project=@calcom/embed-core",
@@ -146,8 +147,7 @@
   },
   "prisma": {
     "schema": "packages/prisma/schema.prisma",
-    "seed": "ts-node --transpile-only ./packages/prisma/seed.ts",
-    "generate-admin": "ts-node --transpile-only ./packages/prisma/seed-generate-admin.ts"
+    "seed": "ts-node --transpile-only ./packages/prisma/seed.ts"
   },
   "packageManager": "yarn@3.4.1",
   "syncpack": {
