--- a/packages/platform/atoms/package.json
+++ b/packages/platform/atoms/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.17.15",
     "class-variance-authority": "^0.4.0",
