chore: Remove unit tests from running after crowd in

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,12 +1,11 @@
 name: Unit
 on:
   workflow_call:
-  workflow_run:
-    workflows: [Crowdin Action]
-    types: [completed]
 jobs:
   test:
     name: Unit
+    permissions:
+      contents: read
     timeout-minutes: 20
     runs-on: buildjet-2vcpu-ubuntu-2204
     steps:
