remove accidently file commit

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -30,5 +30,5 @@
     "../../packages/features/bookings/lib/getBookingInfo.ts",
     "../../packages/features/bookings/lib/getUserBooking.ts"
   ],
-  "exclude": ["node_modules", "app", "**/playwright/**", "**/*.tests*", "**/test/**"]
+  "exclude": ["node_modules"]
 }
