--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jsdom": "^21.1.3",
     "@types/jsonwebtoken": "^9.0.3",
+    "@vitest/coverage-v8": "^2.0.4",
     "c8": "^7.13.0",
     "checkly": "latest",
     "dotenv-checker": "^1.1.5",
