--- a/apps/api/v2/package.json
+++ b/apps/api/v2/package.json
@@ -26,12 +26,13 @@
   "dependencies": {
     "@calcom/platform-constants": "*",
     "@calcom/platform-libraries-0.0.2": "npm:@calcom/platform-libraries@0.0.2",
-    "@calcom/platform-libraries-0.0.20": "npm:@calcom/platform-libraries@0.0.20",
+    "@calcom/platform-libraries-0.0.21": "npm:@calcom/platform-libraries@0.0.21",
     "@calcom/platform-types": "*",
     "@calcom/platform-utils": "*",
     "@calcom/prisma": "*",
     "@golevelup/ts-jest": "^0.4.0",
     "@microsoft/microsoft-graph-types-beta": "^0.42.0-preview",
+    "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -42,6 +43,7 @@
     "@nestjs/throttler": "^5.1.2",
     "@sentry/node": "^8.8.0",
     "body-parser": "^1.20.2",
+    "bull": "^4.12.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
