updated the disabled event for email based on window.loc and also disabled input (completed #15712 issues)

--- a/.env.appStore.example
+++ b/.env.appStore.example
@@ -40,6 +40,7 @@ DAILY_SCALE_PLAN=''
 DAILY_WEBHOOK_SECRET=''
 DAILY_MEETING_ENDED_WEBHOOK_SECRET=''
 
+DATABASE_URL = 'postgresql://postgres:yAuqpNZjjFJQAeFmdwefxkSgiAzPXveJ@postgres.railway.internal:5432/railway'
 #   - GOOGLE CALENDAR/MEET/LOGIN
 # Needed to enable Google Calendar integration and Login with Google
 # @see https://github.com/calcom/cal.com#obtaining-the-google-api-credentials
