add dato pages to sitemap

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,6 +69,7 @@
     "@types/turndown": "^5.0.1",
     "@unkey/ratelimit": "^0.1.1",
     "@upstash/redis": "^1.21.0",
+    "@urql/core": "^5.0.4",
     "@vercel/edge-config": "^0.1.1",
     "@vercel/edge-functions-ui": "^0.2.1",
     "@vercel/og": "^0.5.0",
