--- a/turbo.json
+++ b/turbo.json
@@ -84,6 +84,7 @@
         "DATOCMS_GRAPHQL_ENDPOINT",
         "DATOCMS_WEBHOOK_SECRET",
         "DATOCMS_PREVIEW_SECRET",
+        "DOCS_PROJECT_URL",
         "ENVIRONMENT_URL",
         "NEXT_PUBLIC_AVAILABILITY_SCHEDULE_INTERVAL",
         "NEXT_PUBLIC_IS_PREMIUM_NEW_PLAN",
@@ -103,8 +104,7 @@
         "STRIPE_SUPPORT_TABLE",
         "MOTIFLAND_REST_ENDPOINT",
         "MOTIFLAND_DOCS_API_KEY",
-        "MOTIFLAND_DOCS_PROJECT_ID",
-        "DOCS_PROJECT_URL"
+        "MOTIFLAND_DOCS_PROJECT_ID"
       ]
     },
     "build": {
