--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -8,7 +8,10 @@
   "main": "index.ts",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "trpc:bake": "yarn trpc:clean && yarn trpc:generate",
+    "trpc:generate": "yarn tsc --project tsconfig.json",
+    "trpc:clean": "rm -rf ./routers/types"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.15",
@@ -18,5 +21,8 @@
     "@trpc/server": "11.0.0-next-beta.222",
     "superjson": "1.9.1",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
