--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -81,6 +81,7 @@
     "dotenv-cli": "^6.0.0",
     "entities": "^4.4.0",
     "eslint-config-next": "^13.2.1",
+    "globby": "^14.0.2",
     "googleapis": "^84.0.0",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.7",
