--- a/turbo.json
+++ b/turbo.json
@@ -415,6 +415,7 @@
     "NEXT_PUBLIC_HEAD_SCRIPTS",
     "NEXT_PUBLIC_BODY_SCRIPTS",
     "NEXT_PUBLIC_ORG_SELF_SERVE_ENABLED",
+    "NEXT_PUBLIC_ORG_MINIMUM_PUBLISHED_TEAMS_SELF_SERVE",
     "NEXT_PUBLIC_API_V2_ROOT_URL"
   ]
 }
