--- a/.env.example
+++ b/.env.example
@@ -260,7 +260,7 @@ NEXT_PUBLIC_AVAILABILITY_SCHEDULE_INTERVAL=
 # use organizations
 ORGANIZATIONS_ENABLED=
 NEXT_PUBLIC_ORGANIZATIONS_MIN_SELF_SERVE_SEATS=30
-NEXT_PUBLIC_ORGANIZATIONS_SELF_SERVE_PRICE=3700
+NEXT_PUBLIC_ORGANIZATIONS_SELF_SERVE_PRICE=3700 # $37.00 per seat
 
 # This variable should only be set to 1 or true if you want to autolink external provider sing-ups with
 # existing organizations based on email domain address
