fix: make project name dynamic

--- a/.env.example
+++ b/.env.example
@@ -349,3 +349,4 @@ PROJECT_VAR_TRANSLATIONS=[{"attendee_phone_number":"Phone Call","organizer_defau
 NEXT_PUBLIC_PROJECT_VAR_TRANSLATIONS='{"buffer":{"attendee_phone_number":"Phone Call","organizer_default_conferencing_app":"Zoom"}}'
 NEXT_PUBLIC_PHONE_LABEL='This phone number will be used to call you.'
 DISABLE_CAL_DEFAULT_EMAIL_CONFIRMATIONS=true
+NEXT_PUBLIC_PROJECT_NAME=buffer
