--- a/turbo.json
+++ b/turbo.json
@@ -39,7 +39,8 @@
         "STRIPE_TEAM_MONTHLY_PRICE_ID",
         "STRIPE_ORG_MONTHLY_PRICE_ID",
         "NEXT_PUBLIC_PROJECT_VAR_TRANSLATIONS",
-        "NEXT_PUBLIC_PHONE_LABEL"
+        "NEXT_PUBLIC_PHONE_LABEL",
+        "NEXT_PUBLIC_PROJECT_NAME"
       ]
     },
     "@calcom/web#dx": {
@@ -85,6 +86,7 @@
         "NEXT_PUBLIC_WEBSITE_URL",
         "NEXT_PUBLIC_PROJECT_VAR_TRANSLATIONS",
         "NEXT_PUBLIC_PHONE_LABEL",
+        "NEXT_PUBLIC_PROJECT_NAME",
         "SENDGRID_VERIFICATION_KEY",
         "STRIPE_FREE_PLAN_PRODUCT_ID",
         "STRIPE_PREMIUM_PLAN_PRODUCT_ID",
