--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
     "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
     "lint:report": "eslint . --format json --output-file ../../lint-results/web.json",
     "check-changed-files": "ts-node scripts/ts-check-changed-files.ts",
-    "translate-locales": "ts-node scripts/check-missing-translations.ts"
+    "translate-locales": "ts-node scripts/check-missing-translations.ts",
+    "i18n-cleanup": "ts-node scripts/i18n-cleanup/main.ts"
   },
   "engines": {
     "node": "18",
@@ -151,6 +152,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/detect-port": "^1.3.2",
     "@types/glidejs__glide": "^3.4.2",
+    "@types/glob": "^8.1.0",
     "@types/lodash": "^4.14.182",
     "@types/markdown-it": "^12.2.3",
     "@types/md5": "^2.3.2",
