added new env variables requirement in .env.example

--- a/.env.example
+++ b/.env.example
@@ -367,3 +367,7 @@ RETELL_AI_KEY=
 
 # Used to disallow emails as being added as guests on bookings
 BLACKLISTED_GUEST_EMAILS=
+
+# You can use: 'npx web-push generate-vapid-keys' to generate these keys
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
