--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.59.0",
+    "@vercel/functions": "^1.4.0",
     "city-timezones": "^1.2.1",
     "eslint": "^8.34.0",
     "turbo": "^1.10.1"
