--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -171,6 +171,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "detect-port": "^1.3.0",
     "env-cmd": "^10.1.0",
+    "fs-extra": "^11.2.0",
+    "glob": "^11.0.0",
     "module-alias": "^2.2.2",
     "msw": "^0.42.3",
     "node-html-parser": "^6.1.10",
