feat: Add Proton Calendar package to the app store
This commit adds the Proton Calendar package to the app store. It includes the following changes:
- Added DESCRIPTION.md file
- Added api/index.ts file
- Added index.ts file
- Added lib/index.ts file
- Added config.json file
- Added package.json file
- Added api/add.ts file

--- a/packages/app-store/proton-calendar/config.json
+++ b/packages/app-store/proton-calendar/config.json
@@ -1,15 +1,15 @@
 {
-  "name": "ICS Feed",
-  "title": "ICS Feed",
-  "slug": "ics-feed",
-  "dirName": "ics-feedcalendar",
-  "type": "ics-feed_calendar",
+  "name": "Proton Calendar",
+  "title": "Proton Calendar",
+  "slug": "proton-calendar",
+  "type": "proton_calendar",
   "logo": "icon.svg",
+  "url": "https://proton.me/calendar",
   "variant": "calendar",
   "categories": ["calendar"],
   "publisher": "Cal.com, Inc.",
   "email": "help@cal.com",
-  "description": "Import events from an ICS Feed into Cal.com.",
+  "description": "Import events from a Proton Calendar into Cal.com.",
   "isTemplate": false,
   "__createdUsingCli": true
 }
