--- a/packages/trpc/tsconfig.json
+++ b/packages/trpc/tsconfig.json
@@ -1,12 +1,4 @@
 {
   "extends": "@calcom/tsconfig/react-library.json",
-  "include": ["client", "next", "react", "server"],
-  "compilerOptions": {
-    "isolatedModules": false,
-    "noEmit": false,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": false,
-    "outFile": "types/router.d.ts"
-  }
+  "include": ["client", "next", "react", "server"]
 }
