--- a/turbo.json
+++ b/turbo.json
@@ -338,6 +338,8 @@
     "NEXT_PUBLIC_VERCEL_ENV",
     "NEXT_PUBLIC_VERCEL_BRANCH_URL",
     "NEXT_PUBLIC_GTM_ID",
+    "NEXT_PUBLIC_ORGANIZATIONS_MIN_SELF_SERVE_SEATS",
+    "NEXT_PUBLIC_ORGANIZATIONS_SELF_SERVE_PRICE",
     "NEXT_RUNTIME",
     "NEXTAUTH_COOKIE_DOMAIN",
     "NEXTAUTH_SECRET",
