--- a/.env.example
+++ b/.env.example
@@ -66,7 +66,7 @@ SAML_CLIENT_SECRET_VERIFIER=
 PGSSLMODE=
 
 # Define which hostnames are expected for the app to work on
-ALLOWED_HOSTNAMES='"cal.com","cal.dev","cal-staging.com","cal.community","cal.local:3000","localhost:3000","com","dev","community"'
+ALLOWED_HOSTNAMES='"cal.com","cal.dev","cal-staging.com","cal.community","cal.local:3000","localhost:3000","com","dev","community","local:3000"'
 #  Reserved orgs subdomains for our own usage
 RESERVED_SUBDOMAINS='"app","auth","docs","design","console","go","status","api","saml","www","matrix","developer","cal","my","team","support","security","blog","learn","admin"'
 
