--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,9 @@
     "type-check": "tsc --pretty --noEmit",
     "type-check:ci": "tsc-absolute --pretty --noEmit",
     "lint:fix": "eslint . --fix",
-    "lint:report": "eslint . --format json --output-file ../../lint-results/ui.json"
+    "lint:report": "eslint . --format json --output-file ../../lint-results/ui.json",
+    "build-icons": "node ./scripts/build-icons.mjs",
+    "generate-icons": "node ./scripts/generate-icons.mjs"
   },
   "dependencies": {
     "@calcom/lib": "*",
@@ -57,6 +59,10 @@
     "@calcom/tsconfig": "*",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.9",
+    "execa": "^9.3.0",
+    "fs-extra": "^11.2.0",
+    "glob": "^11.0.0",
+    "node-html-parser": "^6.1.13",
     "typescript": "^4.9.4"
   }
 }
