--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,8 @@
     "lint:fix": "eslint . --ext .ts,.js,.tsx,.jsx --fix",
     "lint:report": "eslint . --format json --output-file ../../lint-results/web.json",
     "check-changed-files": "ts-node scripts/ts-check-changed-files.ts",
-    "translate-locales": "ts-node scripts/check-missing-translations.ts"
+    "translate-locales": "ts-node scripts/check-missing-translations.ts",
+    "remove-unused-translations": "ts-node scripts/remove-unused-translations.ts"
   },
   "engines": {
     "node": "18",
@@ -66,6 +67,7 @@
     "@stripe/stripe-js": "^1.35.0",
     "@tanstack/react-query": "^5.17.15",
     "@tremor/react": "^2.0.0",
+    "@types/glob": "^8.1.0",
     "@types/turndown": "^5.0.1",
     "@unkey/ratelimit": "^0.1.1",
     "@upstash/redis": "^1.21.0",
