--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,7 +43,6 @@
     "cmk": "^0.1.1",
     "date-fns": "^3.6.0",
     "downshift": "^6.1.9",
-    "lucide-react": "^0.364.0",
     "next": "^13.5.4",
     "next-seo": "^6.0.0",
     "react": "^18.2.0",
@@ -60,8 +59,9 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.9",
     "execa": "^9.3.0",
+    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
-    "glob": "^11.0.0",
+    "lucide-static": "^0.424.0",
     "node-html-parser": "^6.1.13",
     "typescript": "^4.9.4"
   }
