--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -21,8 +21,7 @@
     "type-check:ci": "tsc-absolute --pretty --noEmit",
     "lint:fix": "eslint . --fix",
     "lint:report": "eslint . --format json --output-file ../../lint-results/ui.json",
-    "build-icons": "node ./scripts/build-icons.mjs",
-    "generate-icons": "node ./scripts/generate-icons.mjs"
+    "build-icons": "node ./scripts/build-icons.mjs"
   },
   "dependencies": {
     "@calcom/lib": "*",
@@ -48,7 +47,6 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.0",
     "react-day-picker": "^8.10.1",
-    "react-feather": "^2.0.10",
     "react-hook-form": "^7.43.3",
     "react-select": "^5.7.0",
     "react-virtual": "^2.10.4"
