--- a/packages/features/package.json
+++ b/packages/features/package.json
@@ -13,6 +13,7 @@
     "@calcom/ui": "*",
     "@lexical/react": "^0.9.0",
     "@tanstack/react-table": "^8.9.3",
+    "@vercel/functions": "^1.4.0",
     "framer-motion": "^10.12.8",
     "lexical": "^0.9.0",
     "react-select": "^5.7.0",
