--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,6 +42,7 @@
     "cmk": "^0.1.1",
     "date-fns": "^3.6.0",
     "downshift": "^6.1.9",
+    "lucide-react": "^0.364.0",
     "next": "^13.5.4",
     "next-seo": "^6.0.0",
     "react": "^18.2.0",
