--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -117,7 +117,7 @@ jobs:
       - name: Download zipped HTML report
         uses: actions/download-artifact@v2
         with:
-          name: test-results-${{ matrix.shard }}_${{ strategy.job-total }}
+          # name: test-results
           path: ${{ env.HTML_REPORT_URL_PATH }}
       - name: Push HTML Report
         timeout-minutes: 3
