--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -181,8 +181,38 @@ jobs:
     uses: ./.github/workflows/nextjs-bundle-analysis.yml
     secrets: inherit
 
+  merge-reports:
+    name: Merge reports
+    if: ${{ !cancelled() }}
+    needs: [e2e]
+    uses: ./.github/workflows/merge-reports.yml
+    secrets: inherit
+
+  publish-report:
+    name: Publish HTML report
+    if: ${{ !cancelled() }}
+    needs: [merge-reports]
+    uses: ./.github/workflows/publish-report.yml
+    secrets: inherit
+
   required:
-    needs: [changes, lint, type-check, unit-test, integration-test, check-label, build, build-api-v1, build-api-v2, e2e, e2e-api-v2, e2e-embed, e2e-embed-react, e2e-app-store]
+    needs:
+      [
+        changes,
+        lint,
+        type-check,
+        unit-test,
+        integration-test,
+        check-label,
+        build,
+        build-api-v1,
+        build-api-v2,
+        e2e,
+        e2e-api-v2,
+        e2e-embed,
+        e2e-embed-react,
+        e2e-app-store,
+      ]
     if: always()
     runs-on: buildjet-2vcpu-ubuntu-2204
     steps:
