more permissions fixes
Signed-off-by: zomars <zomars@me.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -199,6 +199,8 @@ jobs:
     if: ${{ !cancelled() }}
     permissions:
       contents: write
+      issues: write
+      pull-requests: write
     needs: [merge-reports]
     uses: ./.github/workflows/publish-report.yml
     secrets: inherit
