--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -2,6 +2,8 @@ on:
   workflow_call:
 permissions:
   contents: write
+  issues: write
+  pull-requests: write
 jobs:
   publish-report:
     runs-on: ubuntu-latest
