--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calcom-monorepo",
-  "version": "0.0.0-1",
+  "version": "0.0.0",
   "private": true,
   "workspaces": [
     "apps/*",
