--- a/packages/platform/types/package.json
+++ b/packages/platform/types/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@calcom/platform-constants": "*",
     "@types/express": "^4.17.21",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0"
   }
 }
