--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -189,19 +189,19 @@ jobs:
 
   merge-reports:
     name: Merge reports
-    if: ${{ !cancelled() && needs.check-label.outputs.run-e2e == 'true' }}
-    needs: [check-label, e2e]
+    if: ${{ !cancelled() && needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
+    needs: [changes, check-label, e2e, e2e-embed, e2e-embed-react, e2e-app-store]
     uses: ./.github/workflows/merge-reports.yml
     secrets: inherit
 
   publish-report:
     name: Publish HTML report
-    if: ${{ !cancelled() && needs.check-label.outputs.run-e2e == 'true' }}
+    if: ${{ !cancelled() && needs.check-label.outputs.run-e2e == 'true' && needs.changes.outputs.has-files-requiring-all-checks == 'true' }}
     permissions:
       contents: write
       issues: write
       pull-requests: write
-    needs: [check-label, merge-reports]
+    needs: [changes, check-label, merge-reports]
     uses: ./.github/workflows/publish-report.yml
     secrets: inherit
 
