--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   label-pr:
     runs-on: ubuntu-latest
-
+    permissions:
+      actions: read
+      issues: write
+      pull-requests: write
     steps:
       - name: Label PR as ready for E2E
         if: github.event.review.state == 'approved'
