refactor: adds notice to e2e results

--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -68,11 +68,13 @@ jobs:
           body: |
             <!-- GENERATED-E2E-RESULTS -->
             ## E2E results are ready!
-            - [Attempt #${{ github.run_number }}.${{ github.run_attempt }} results](${{ steps.url.outputs.link }})
+            > [!IMPORTANT]
+            > You might get a 404 for latest results as they take around 1-2 minutes to be fully deployed.
+            - [Workflow #${{ github.run_number }}.${{ github.run_attempt }} results](${{ steps.url.outputs.link }})
       - name: Update comment
         if: steps.fc.outputs.comment-id != ''
         uses: peter-evans/create-or-update-comment@v3
         with:
           comment-id: ${{ steps.fc.outputs.comment-id }}
           body: |
-            - [Attempt #${{ github.run_number }}.${{ github.run_attempt }} results](${{ steps.url.outputs.link }})
+            - [Workflow #${{ github.run_number }}.${{ github.run_attempt }} results](${{ steps.url.outputs.link }})
