--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -14,7 +14,15 @@ jobs:
     steps:
       - name: Label PR as ready for E2E
         if: github.event.review.state == 'approved'
-        uses: actions-ecosystem/action-add-labels@v1
+        uses: actions/github-script@v4
         with:
+          script: |
+            await github.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              labels: process.env.labels.split(', '),
+            })
+        env:
           github_token: ${{ secrets.READY_FOR_E2E_PAT }}
           labels: 'ready-for-e2e'
