hotfix: wrong branch name for reports
Signed-off-by: zomars <zomars@me.com>

--- a/.github/workflows/publish-report.yml
+++ b/.github/workflows/publish-report.yml
@@ -10,7 +10,7 @@ jobs:
     continue-on-error: true
     env:
       # Unique URL path for each workflow run attempt
-      HTML_REPORT_URL_PATH: reports/${{ github.ref_name }}/${{ github.run_id }}/${{ github.run_attempt }}
+      HTML_REPORT_URL_PATH: reports/${{ github.head_ref }}/${{ github.run_id }}/${{ github.run_attempt }}
     steps:
       - name: Checkout GitHub Pages Branch
         uses: actions/checkout@v4
