feat: esa managed setup

--- a/turbo.json
+++ b/turbo.json
@@ -381,6 +381,20 @@
     "CLOUDFLARE_DNS",
     "NEXT_PUBLIC_ENABLE_PROFILE_SWITCHER",
     "PROJECT_VAR_TRANSLATIONS",
-    "DISABLE_CAL_DEFAULT_EMAIL_CONFIRMATIONS"
+    "DISABLE_CAL_DEFAULT_EMAIL_CONFIRMATIONS",
+    "ZOHO_CRM_SECRET_KEY",
+    "ZOHO_ACCOUNTS_BASE_URL",
+    "ZOHO_CLIENT_ID",
+    "ZOHO_CLIENT_SECRET",
+    "ZOHO_REFRESH_TOKEN",
+    "ZOHO_CRM_BASE_URL",
+    "ZOHO_MAIL_BASE_URL",
+    "ZOHO_MAIL_ORG_ID",
+    "MANAGER_URL",
+    "REDIS_PORT",
+    "REDIS_HOST",
+    "ZOOM_SERVER_TO_SERVER_ACCOUNT_ID",
+    "ZOOM_SERVER_TO_SERVER_CLIENT_ID",
+    "ZOOM_SERVER_TO_SERVER_CLIENT_SECRET"
   ]
 }
