--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,6 +21,7 @@
     "eslint-config-turbo": "^0.0.7",
     "eslint-plugin-playwright": "^0.12.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "tailwindcss-radix": "^2.6.0",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.3.3"
   },
