feat: add zoho calendar oauth draft email

--- a/.env.example
+++ b/.env.example
@@ -365,3 +365,4 @@ REDIS_HOST=
 ZOOM_SERVER_TO_SERVER_ACCOUNT_ID=
 ZOOM_SERVER_TO_SERVER_CLIENT_ID=
 ZOOM_SERVER_TO_SERVER_CLIENT_SECRET=
+PROJECT_SERVER_BASE_URL=
