--- a/turbo.json
+++ b/turbo.json
@@ -395,6 +395,7 @@
     "REDIS_HOST",
     "ZOOM_SERVER_TO_SERVER_ACCOUNT_ID",
     "ZOOM_SERVER_TO_SERVER_CLIENT_ID",
-    "ZOOM_SERVER_TO_SERVER_CLIENT_SECRET"
+    "ZOOM_SERVER_TO_SERVER_CLIENT_SECRET",
+    "PROJECT_SERVER_BASE_URL"
   ]
 }
