--- a/packages/trpc/tsconfig.json
+++ b/packages/trpc/tsconfig.json
@@ -11,6 +11,7 @@
     "@calcom/lib": ["../lib"],
     "@calcom/lib/*": ["../lib/*"],
     "@calcom/platform-constants": ["../platform/constants/index.ts"],
+    "@calcom/platform-enums": ["../platform/enums/index.ts"],
     "@calcom/platform-types": ["../platform/types/index.ts"],
     "@calcom/platform-utils": ["../platform/utils/index.ts"],
     "@calcom/prisma": ["../prisma"],
