fixup! fixup! fix build

--- a/packages/platform/enums/tsconfig.json
+++ b/packages/platform/enums/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ES5",
     "resolveJsonModule": true,
+    "experimentalDecorators": true,
     "baseUrl": "./",
     "outDir": "./dist"
   },
